--- a/portfolio/routes/_app.css
+++ b/portfolio/routes/_app.css
@@ -2,71 +2,148 @@
 
 @font-face {
     font-family: Geist;
-    src: url("/fonts/Geist/Geist[wght].woff2");
+    src: url("/fonts/Geist/Geist[wght].woff2")
 }
 
 @font-face {
     font-family: OpenMoji;
-    src: url("/fonts/OpenMoji/OpenMoji-color-glyf_colr_0.woff2");
+    src: url("/fonts/OpenMoji/OpenMoji-color-glyf_colr_0.woff2")
 }
 
 *, :after, :before {
     box-sizing: border-box;
     user-select: none;
+    user-drag: none;
+    -webkit-user-drag: none;
+    user-select: none;
     -moz-user-select: none;
-    -khtml-user-select: none;
     -webkit-user-select: none;
-    -o-user-select: none;
+    -ms-user-select: none
 }
 
 :root {
     --background-color: 9, 9, 11;
     --color: 250, 250, 250;
     --accent: 22, 163, 74;
+    --valid: 22, 163, 74;
+    --invalid: 239, 68, 68;
     --container: 39, 39, 42;
     --radius: calc(0.5rem - 2px);
-    --border-color: 39, 39, 42
+    --border-color: 39, 39, 42;
+    --border-width: 1.5px
 }
 
 [data-theme="light"] {
     --background-color: 255, 255, 255;
     --color: 9, 9, 11;
     --accent: 74, 222, 128;
+    --valid: 74, 222, 128;
+    --invalid: 220, 38, 38;
     --container: 244, 244, 245;
-    --border-color: 228, 228, 231
+    --radius: calc(0.5rem - 2px);
+    --border-color: 228, 228, 231;
+    --border-width: 1.5px
 }
 
 body, html {
     margin: 0;
-    padding: 2rem 0 0;
     width: 100%;
     height: 100%;
+    min-height: max-content;
     font-family: Geist, ui-sans-serif, system-ui, sans-serif, OpenMoji, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     background-color: rgb(var(--background-color));
     color: rgb(var(--color));
     display: flex;
     line-height: 1.5rem;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-between
 }
 
 h1 {
-    line-height: 2.5rem;
+    line-height: 2.5rem
 }
 
 a {
+    margin: 0;
+    padding: 0;
     color: inherit;
     text-decoration: inherit
 }
 
+textarea, input {
+    background: transparent;
+    border-color: rgb(var(--color), 0.5);
+    border-style: solid;
+    border-width: var(--border-width);
+    padding: .5rem .75rem;
+    border-radius: var(--radius);
+    max-width: fit-content;
+    min-width: 100%; 
+    min-height: 100%;
+    display: block;
+    outline: none;
+    caret-color: rgb(var(--accent));
+    color: rgb(var(--color))
+}
+
+textarea:focus, input:focus {
+    outline: none;
+    border-color: rgb(var(--color))
+}
+
+textarea:required:valid, input:required:valid {
+    border-color: rgb(var(--valid))
+}
+
+textarea:required:invalid, input:required:invalid {
+    border-color: rgb(var(--invalid))
+}
+
+button {
+    border-color: transparent;
+    border-radius: var(--radius);
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+    transition-timing-function: cubic-bezier(.4,0,.2,1);
+    transition-duration: .15s;
+    font-weight: 500;
+    font-size: .875rem;
+    line-height: 1.25rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    cursor: pointer;
+    color: rgba(var(--color), 1);
+    background-color: rgb(var(--accent))
+}
+
+button:hover {
+    background-color: rgba(var(--accent), 0.75)
+}
+
+.link {
+    text-decoration: none;
+    color: rgb(var(--accent));
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+    transition-timing-function: cubic-bezier(.4,0,.2,1);
+    transition-duration: .15s
+}
+
+.link:hover {
+    color: rgb(var(--accent), 0.75)
+}
+
 .navbar {
     background-color: rgb(var(--background-color));
-    position: fixed;
+    position: sticky;
     width: 100%;
     top: 0;
     border-bottom-color: rgb(var(--border-color));
     border-bottom-style: solid;
-    border-bottom-width: 1px;
+    border-bottom-width: var(--border-width)
 }
 
 .navbar-items {
@@ -91,7 +168,7 @@ a {
 }
 
 .navbar-item-selected .button:hover {
-    background-color: transparent;
+    background-color: transparent
 }
 
 .button {
@@ -119,13 +196,16 @@ a {
 .footer {
     border-top-color: rgb(var(--border-color));
     border-top-style: solid;
-    border-top-width: 1px;
+    border-top-width: var(--border-width);
     width: 100%;
     text-align: center;
-    margin-top: 2rem;
+    margin-top: 2rem
 }
 
 .container {
+    align-self: center;
+    justify-self: center;
+    max-width: fit-content;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -134,20 +214,27 @@ a {
     margin: 2rem 5rem 0;
     padding: 3rem;
     border-radius: var(--radius);
-    background-color: rgb(var(--container));
+    background-color: rgb(var(--container))
 }
 
 .container img {
     border-radius: var(--radius);
-    width: 100%;
+    width: 100%
 }
 
 .container p {
-    text-align: justify;
+    text-align: justify
 }
 
 .container .picture-and-name {
-    text-align: center;
+    text-align: center
+}
+
+.form-items {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    margin-bottom: .65rem
 }
 
 .cards {
@@ -157,7 +244,7 @@ a {
     align-items: center;
     justify-content: space-around;
     margin: 0;
-    border-radius: var(--radius);
+    border-radius: var(--radius)
 }
 
 .card {
@@ -173,11 +260,15 @@ a {
     margin-top: 0;
     margin-bottom: 2rem;
     border-style: solid;
-    border-width: 1px;
+    border-width: var(--border-width)
+}
+
+.card img {
+    background-size: cover;
 }
 
 .card-content {
     height: 100%;
     width: 100%;
-    padding: 0 1.5rem;
+    padding: 0 1.5rem
 }
